:sparkles: feat: Adicionado funções POST, PUT e DELETE
Foi finalizado as funções do Controller e adicionado um documento com endpoints.